--- a/src/mainBundle/Resources/views/Main/layout.html.twig
+++ b/src/mainBundle/Resources/views/Main/layout.html.twig
@@ -1,12 +1,13 @@
 <html>
 	<head>
-		<title>{% block title %}Accueil Symfony{% endblock %}</title>
+		<title>{% block title %}{% endblock %}</title>
 		<meta charset="utf-8">
     		<meta http-equiv="X-UA-Compatible" content="IE=edge">
    		<meta name="viewport" content="width=device-width, initial-scale=1">
     		<!-- Bootstrap -->
     		<link href={{ asset('bundles/main/css/bootstrap.min.css') }} rel="stylesheet">
 		<link href={{ asset('bundles/main/css/bootstrap-theme.min.css') }} rel="stylesheet">
+		<link href={{ asset('bundles/main/css/style.css') }} rel="stylesheet">
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     		<!--[if lt IE 9]>
@@ -17,8 +18,13 @@
 	</head>
 
 	<body>
+		<div class="container">
+			{% include 'mainBundle:Main:menu.html.twig' with { "current": block('menu') } %}
+		</div>
+		
 		<div id="content">
-            		{% block body %}{% endblock %}
+            		{% block body %}
+            		{% endblock %}
         	</div>
     	</body>
 </html>
