--- a/src/ReservationBundle/Resources/views/Default/index.html.twig
+++ b/src/ReservationBundle/Resources/views/Default/index.html.twig
@@ -6,4 +6,9 @@
 
 {% block body %}
 <h1 class="text-center">Sytème de gestion des réservations de salles</h1>
+
+<a href="" ><button type="button" class="btn btn-primary">Réserver</button></a> 
+
+<p>Aujourd'hui, {{ "now"|date("j M Y") }}</p>
+
 {% endblock %}
