--- a/src/ReservationBundle/Resources/views/Default/reserver.html.twig
+++ b/src/ReservationBundle/Resources/views/Default/reserver.html.twig
@@ -7,30 +7,34 @@
 {% block body %}
 <h1 class="text-center">Réserver une salle</h1>
 
+{#{ form(formulaire_reservation) }#}
+
 <div class="center-block">
-<form action="" method="POST" class="form-horizontal">
+{{ form_start(formulaire_reservation) }}
 	<div class="form-group">
 		<label class="col-sm-2">Nom</label>
-		<input type='text' name='nom' class="col-sm-4" />
+		{{ form_widget(formulaire_reservation.nom) }}
 	</div>
 	<div class="form-group">
 		<label class="col-sm-2">Mail</label>
-		<input type='email' name='mail' class="col-sm-4" />
+		{{ form_widget(formulaire_reservation.mail) }}
 	</div>
 	<div class="form-group">
 		<label class="col-sm-2">Début</label>
-		<input type='datetime' name='dateDebut' class="col-sm-4" />
+		{{ form_widget(formulaire_reservation.dateDebut) }}
 	</div>
 	<div class="form-group">
 		<label class="col-sm-2">Fin</label>
-		<input type='datetime' name='dateFin' class="col-sm-4" />
-	</div>
-	<div class="form-group">
-		<label class="col-sm-2">Salle</label>
-		<select class="col-sm-4"></select>
+		{{ form_widget(formulaire_reservation.dateFin) }}
 	</div>
 	
-	<button type="submit" class="btn btn-default">Réserver</button>
-</form>
+	<div class="form-group">
+		<label class="col-sm-2">Salle à réserver</label>
+		{{ form_widget(formulaire_reservation.salle) }}
+	</div>
+	
+	{{ form_widget(formulaire_reservation.ajouter) }}
+{{ form_end(formulaire_reservation) }}
 </div>
+
 {% endblock %}
