--- a/src/mainBundle/Resources/views/Main/layout.html.twig
+++ b/src/mainBundle/Resources/views/Main/layout.html.twig
@@ -8,13 +8,23 @@
     		<link href={{ asset('bundles/main/css/bootstrap.min.css') }} rel="stylesheet">
 		<link href={{ asset('bundles/main/css/bootstrap-theme.min.css') }} rel="stylesheet">
 		<link href={{ asset('bundles/main/css/style.css') }} rel="stylesheet">
+		<link href={{ asset('bundles/main/css/jquery-ui.min.css') }} rel="stylesheet">
+		<link href={{ asset('bundles/main/css/jquery.datetimepicker.css') }} rel="stylesheet">
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     		<!--[if lt IE 9]>
       		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     		<![endif]-->
+		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script src={{ asset('bundles/main/js/jquery-ui.min.js') }} type="text/javascript"></script>
+		<script src={{ asset('bundles/main/js/jquery.datetimepicker.js') }} type="text/javascript"></script>
+		<script>
+		  $(function() {
+			$( "#reservationbundle_reservation_dateDebut" ).datetimepicker();
+			$( "#reservationbundle_reservation_dateFin" ).datetimepicker();
+		  });
+		</script>
 	</head>
 
 	<body>
