--- a/src/mainBundle/Resources/views/Main/layout.html.twig
+++ b/src/mainBundle/Resources/views/Main/layout.html.twig
@@ -10,6 +10,8 @@
 		<link href={{ asset('bundles/main/css/style.css') }} rel="stylesheet">
 		<link href={{ asset('bundles/main/css/jquery-ui.min.css') }} rel="stylesheet">
 		<link href={{ asset('bundles/main/css/jquery.datetimepicker.css') }} rel="stylesheet">
+		<link href={{ asset('bundles/main/css/fullcalendar.min.css') }} rel="stylesheet">
+		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     		<!--[if lt IE 9]>
@@ -17,10 +19,14 @@
       		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     		<![endif]-->
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+		<script src={{ asset('bundles/main/js/moment.min.js') }} type="text/javascript"></script>
 		<script src={{ asset('bundles/main/js/jquery-ui.min.js') }} type="text/javascript"></script>
 		<script src={{ asset('bundles/main/js/jquery.datetimepicker.js') }} type="text/javascript"></script>
+		<script src={{ asset('bundles/main/js/fullcalendar.min.js') }} type="text/javascript"></script>
+		<script src={{ asset('bundles/main/lang/fr.js') }} type="text/javascript"></script>
 		<script>
 		  $(function() {
+			  //DateTimePicker
 			$( "#reservationbundle_reservation_dateDebut" ).datetimepicker();
 			$( "#reservationbundle_reservation_dateFin" ).datetimepicker();
 		  });
