--- a/src/ReservationBundle/Resources/views/Default/edit.html.twig
+++ b/src/ReservationBundle/Resources/views/Default/edit.html.twig
@@ -1,7 +1,9 @@
 {% extends 'mainBundle:Main:layout.html.twig' %}
 
+{% block title %}Modifier une salle - Gestion Réservation{% endblock %}
+
 {% block body -%}
-    <h1>Salle edit</h1>
+    <h1>Modifier une salle</h1>
 
     {{ form(edit_form) }}
     
